Fix: card-body overflowing when constraining horizontal viewport

--- a/styles.css
+++ b/styles.css
@@ -95,12 +95,12 @@ body {
 
 .card-body {
     background-color: var(--card-color);
-    height: 160px;
-    position: absolute;
     color: white;
-    top: 184px;
 
-    width: inherit;
+    height: 160px;
+    margin-top: 20vh;
+    width: 100%;
+    
     display: flex;
     justify-content: center;
     align-items: center;
